添加缺少类

--- a/moses-demo/src/main/resources/templates/product/productEdit.html
+++ b/moses-demo/src/main/resources/templates/product/productEdit.html
@@ -208,7 +208,7 @@
                                        name="personalDetailed" value="0" required/>
                             </div>
                             <div class="form-group">
-                                <label>个人流水(万元)</label>
+                                <label>公司流水(万元)</label>
                                 <input type="number" class="form-control" th:value="*{companyDetailed}"
                                        name="companyDetailed" value="0" required/>
                             </div>
