--- a/moses-demo/src/main/resources/templates/product/productAdd.html
+++ b/moses-demo/src/main/resources/templates/product/productAdd.html
@@ -202,7 +202,7 @@
                                        value="0" required/>
                             </div>
                             <div class="form-group">
-                                <label>个人流水(万元)</label>
+                                <label>公司流水(万元)</label>
                                 <input type="number" class="form-control" placeholder="请输入 ..." name="companyDetailed"
                                        value="0"
                                        required/>
